--- a/client/src/components/Footer.module.css
+++ b/client/src/components/Footer.module.css
@@ -1,6 +1,7 @@
 .root {
   text-align: center;
   margin-top: 4rem;
+  align-self: flex-end;
 }
 
 .sponge {
